카테고리페이지 영상분석페이지 오류수정